--- a/pages/header.html
+++ b/pages/header.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../src/style.css" />
     <title>HeaderHtml</title>
   </head>
   <body>
@@ -109,7 +110,7 @@
               <li><a href="/index.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="Home 이동">Home</a></li>
               <li><a href="/pages/about.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="About 이동">About</a></li>
               <li><a href="/pages/devLog.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="DevLog 이동">DevLog</a></li>
-              <li><a href="" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="연락처 이동">연락처</a></li>
+              <li><a href="/pages/header.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="연락처 이동">연락처</a></li>
             </ul>
           </nav>
         </aside>
@@ -117,7 +118,7 @@
     </header>
 
     
-    <script type="module" src="/src/main.js"></script>
+    <!-- <script type="module" src="/src/main.js"></script> -->
     <script src="../components/menuBtn.js"></script>
     <script type="module" src="/components/darkmode/darkmode_index.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
