supabase API 연동

--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -131,6 +131,7 @@
         <script type="module" src="/components/header/header.js"></script>
         <script type="module" src="/components/devLog/calender.js"></script>
         <script src="/components/devLog/login/devLoginCheck.js"></script>
+        <script type="module" src="/components/devLog/supabaseTest.js"></script>
 </body>
 
 </html>
