--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>개인 블로그</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="../src/scroll.css" />
   </head>
-  <body>
+  <body class="scroll">
 
     <!-- 헤더 -->
     <div id="header-placeholder"></div>
