--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인 블로그</title>
     <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="../src/scroll.css" />
 </head>
 
 <body class="overflow-hidden">
@@ -23,7 +24,7 @@
     </aside>
 
     <!--메인-->
-    <main id="maincontainer" class="maincontainer h-screen overflow-y-scroll scroll-smooth snap-y snap-mandatory">
+    <main id="maincontainer" class="scroll maincontainer h-screen overflow-y-scroll scroll-smooth snap-y snap-mandatory">
         <section id="introduction_section_1" class="snap-start h-full">
             <!--비디오 섹션-->
             <header class="relative w-full h-screen overflow-hidden">
