--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인 개발 블로그 - 회고록</title>
     <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="../src/scroll.css" />
 </head>
 
-<body>
+<body class="scroll">
     <div id="header-placeholder"></div>
 
     <!--메인-->
