--- a/pages/postCreate.html
+++ b/pages/postCreate.html
@@ -10,6 +10,28 @@
   <body>
     <header id="header-placeholder"></header>
     <main id="post-section" class="w-full h-[calc(100vh-5rem)] grid grid-cols-1 md:grid-cols-2 mt-20 bg-gray-50 dark:bg-gray-800 dark:text-white">
+      <div id="imgWrapper" class="hidden z-1 fixed inset-0 flex items-center justify-center bg-black/40">
+        <div id="imgAdd" class="w-[250px] rounded-xl border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 shadow-lg p-3 z-50">
+          <label for="imageInput" class="sr-only"></label>
+          <div class="relative flex flex-col items-center justify-center border border-dashed border-gray-300 dark:border-gray-600 rounded-lg p-4 text-sm text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 cursor-pointer transition">
+            <!-- 실제 파일 input -->
+            <input id="imageInput" type="file" accept="image/*" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer"/>
+  
+            <!-- UI -->
+            <svg class="mb-2 text-gray-400" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+              <polyline points="17 8 12 3 7 8" />
+              <line x1="12" y1="3" x2="12" y2="15" />
+            </svg>
+  
+            <span>이미지 선택</span>
+            <span class="text-xs text-gray-400 mt-1">jpg · png · webp</span>
+          </div>
+          <div class="mt-2 text-xs text-gray-400 text-center">
+            최대 5MB 업로드 가능
+          </div>
+        </div>
+      </div>
       <section class="scroll flex flex-col w-full h-[calc(100vh-8.75rem)] p-4 overflow-hidden">
         <textarea id="title" class="min-h-15 p-2 w-full break-words resize-none text-4xl mb-5 mt-5 overflow-hidden focus:outline-1 focus:outline-gray-600" rows="1" placeholder="제목을 입력하세요"></textarea>
           <div class="flex mb-5">
@@ -24,42 +46,42 @@
             </select>
           </div>
           <div class="flex flex-wrap">
-            <button class="w-[48px] h-[48px] rounded-2xl text-[26px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">1</span></button>
-            <button class="w-[48px] h-[48px] rounded-2xl text-[22px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">2</span></button>
-            <button class="w-[48px] h-[48px] rounded-2xl text-[18px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">3</span></button>
-            <button class="w-[48px] h-[48px] rounded-2xl text-[16px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">4</span></button>
+            <button id="h1InputBtn" class="w-[48px] h-[48px] rounded-2xl text-[26px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">1</span></button>
+            <button id="h2InputBtn" class="w-[48px] h-[48px] rounded-2xl text-[22px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">2</span></button>
+            <button id="h3InputBtn" class="w-[48px] h-[48px] rounded-2xl text-[18px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">3</span></button>
+            <button id="h4InputBtn" class="w-[48px] h-[48px] rounded-2xl text-[16px] text-center hover:bg-gray-300 dark:hover:bg-gray-600 cursor-pointer">H<span class="text-[12px]">4</span></button>
 
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><strong class="text-[20px]">B</strong></button>
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><em class="font-serif italic text-[20px]">I</em></button>
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="relative inline-block text-[20px] font-serif">T<span class="absolute left-0 right-0 top-1/2 h-[1.5px] bg-current"></span></span></button>
+            <button id="boldInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><strong class="text-[20px]">B</strong></button>
+            <button id="emInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><em class="font-serif italic text-[20px]">I</em></button>
+            <button id="stInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer"><span class="relative inline-block text-[20px] font-serif">T<span class="absolute left-0 right-0 top-1/2 h-[1.5px] bg-current"></span></span></button>
 
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
-              <div class="flex items-center justify-center">
+            <button id="quoInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
+              <span class="flex items-center justify-center">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M6.5 17C5.1 17 4 15.9 4 14.5C4 13.4 4.7 12.4 5.7 12L7 11.4V7H11V12.5C11 15.5 8.9 17 6.5 17ZM16.5 17C15.1 17 14 15.9 14 14.5C14 13.4 14.7 12.4 15.7 12L17 11.4V7H21V12.5C21 15.5 18.9 17 16.5 17Z"/>
                 </svg>
-              </div>
+              </span>
             </button>
             
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
-              <div class="flex items-center justify-center">
+            <button id="linkInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
+              <span class="flex items-center justify-center">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M10 13a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 7l-1 1" />
                   <path d="M14 11a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7-7l1-1" />
                 </svg>
-              </div>
+              </span>
             </button>
 
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
-              <div class="flex items-center justify-center">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <button id="imgInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">
+              <span class="flex items-center justify-center">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <rect x="3" y="3" width="20" height="20" rx="2" ry="2" />
                   <path d="M3 17l6-6 4 4 3-3 5 5" />
                   <circle cx="9" cy="9" r="1.5" />
                 </svg>
-              </div>
+              </span>
             </button>
-            <button class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">&lt; &gt;</button>
+            <button id="codeInputBtn" class="w-12 h-12 rounded-2xl dark:hover:bg-gray-600 hover:bg-gray-300 cursor-pointer">&lt; &gt;</button>
           </div>
         <textarea id="content" class="scroll w-full flex-1 h-full overflow-y-auto resize-none focus:outline-1 focus:outline-gray-600 p-5" name="content" placeholder="내용을 입력해주세요."></textarea>
       </section>
@@ -91,6 +113,9 @@
     <script type="module" src="/components/header/innerHeader.js"></script>
     <script type="module" src="/components/header/header.js"></script>
     <script type="module" src="/components/postCreate/preview/previewcontroler.js"></script>
+
+    <!-- 버튼 상호작용 -->
+     <script type="module" src="../components/postCreate/inputcontent/inputPostEditor.js"></script>
 
     <!-- textarea input -->
     <script type="module" src="../components/postCreate/inputcontent/contentScroll.js"></script>
