깃허브 배포 1.0v

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인 블로그</title>
-    <link rel="stylesheet" href="../src/style.css" />
-    <link rel="stylesheet" href="../src/scroll.css" />
+    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/scroll.css" />
 </head>
 
 <body class="overflow-hidden">
@@ -28,7 +28,7 @@
         <section id="introduction_section_1" class="snap-start h-full">
             <!--비디오 섹션-->
             <header class="relative w-full h-screen overflow-hidden">
-                <video class="absolute inset-0 w-full h-full object-cover" src="../video/mainvideo.mp4" autoplay muted
+                <video class="absolute inset-0 w-full h-full object-cover" src="/video/mainvideo3.mp4" autoplay muted
                     loop></video>
                 <div class="absolute w-full h-full bg-black/50"></div>
                 <div class="absolute w-full h-full flex flex-col justify-center text-white z-10">
@@ -40,25 +40,25 @@
 
         <div class="bg-gray-300 dark:bg-gray-700 text-black dark:text-white flex flex-col"> 
             <section id="introduction_section_2" class="snap-start h-screen pt-20 justify-center items-center flex">
-                <img width="400" class="rounded-2xl shadow-lg mr-10" src="../img/cookie.jpg" alt="고양이 사진" />          
+                <img width="400" class="rounded-2xl shadow-lg mr-10" src="/img/cookie.jpg" alt="고양이 사진" />          
                 <div class="flex flex-col rounded-lg shadow-lg gap-4 bg-gray-200 text-black p-10">
                     <h2 class="text-3xl mb-5">김도혁</h2>
                     <nav class="grid gap-10">
                         <ul class="text-xl gap-10 flex items-center">
-                            <img width="45" height="45" class="w-[45px] h-[45px]" src="../img/edu.png" alt="학력 이미지" />
+                            <img width="45" height="45" class="w-[45px] h-[45px]" src="/img/edu.png" alt="학력 이미지" />
                             <li class="flex flex-col gap-3">
                                 <p>세명대 컴퓨터학부 졸업 <span class="text-sm">(2017 ~ 2022)</span></p>
                                 <p>멋쟁이사자 부트캠프 17th <span class="text-sm">(2026.01 ~ )</span></p>
                             </li>
                         </ul>
                         <ul class="text-xl gap-10 flex items-center">
-                            <img width="44" height="44" class="w-[44px] h-[44px] ml-[1px]" src="../img/career.png" alt="경력 이미지" />
+                            <img width="44" height="44" class="w-[44px] h-[44px] ml-[1px]" src="/img/career.png" alt="경력 이미지" />
                             <li class="flex flex-col gap-3">
                                 <p>ROTC 60기 중위 전역 <span class="text-sm">(2022 ~ 2025)</span></p>
                             </li>
                         </ul>
                         <ul class="text-xl gap-10 flex items-center">
-                            <img width="45" height="45" class="w-[45px] h-[45px]" src="../img/tech.png" alt="기술 이미지" />
+                            <img width="45" height="45" class="w-[45px] h-[45px]" src="/img/tech.png" alt="기술 이미지" />
                             <li class="flex flex-col gap-3">
                                 <p class="text-xl">Stack : HTML, CSS, JavaScript, React</p>
                             </li>
