--- a/pages/postCreate.html
+++ b/pages/postCreate.html
@@ -110,9 +110,9 @@
       </button>
     </main>
 
-    <script type="module" src="/components/header/innerHeader.js"></script>
-    <script type="module" src="/components/header/header.js"></script>
-    <script type="module" src="/components/postCreate/preview/previewcontroler.js"></script>
+    <script type="module" src="../components/header/innerHeader.js"></script>
+    <script type="module" src="../components/header/header.js"></script>
+    <script type="module" src="../components/postCreate/preview/previewcontroler.js"></script>
 
     <!-- 버튼 상호작용 -->
      <script type="module" src="../components/postCreate/inputcontent/inputPostEditor.js"></script>
