깃허브 배포 테스트

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>개인 블로그</title>
-    <link rel="stylesheet" href="/src/style.css" />
-    <link rel="stylesheet" href="/src/scroll.css" />
+    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./src/scroll.css" />
   </head>
   <body class="scroll">
 
@@ -17,7 +17,7 @@
   <main id="main" class="maincontainer">
     <!--비디오 섹션-->
     <section class="relative w-full h-100 mt-16">
-      <video width="1920" height="1080" class="absolute w-full h-full object-cover" src="/video/mainvideo3.mp4" autoplay muted loop></video>
+      <video width="1920" height="1080" class="absolute w-full h-full object-cover" src="./video/mainvideo3.mp4" autoplay muted loop></video>
       <div class="absolute w-full h-full bg-black/50"></div>
       <div class="absolute w-full h-full flex flex-col justify-center text-white z-10">
         <h2 class="p-10 text-5xl">코드로 배우고 공유하다.</h2>
@@ -78,8 +78,8 @@
           <article
             class="border border-gray-400 shadow-sm rounded-lg h-110 flex flex-col justify-start dark:border-gray-600 group-hover:border-blue-500">
             <div class="border-b border-gray-300 flex justify-center w-full aspect-[16/9] overflow-hidden rounded-t-lg">
-              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 hidden dark:block" src="/img/GitHub_Lockup_Light.svg" alt="github"/>
-              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 block dark:hidden" src="/img/GitHub_Lockup_Dark.svg" alt="github"/>
+              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 hidden dark:block" src="./img/GitHub_Lockup_Light.svg" alt="github"/>
+              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 block dark:hidden" src="./img/GitHub_Lockup_Dark.svg" alt="github"/>
             </div>
             <div class="m-5 flex flex-col gap-5 min-h-[120px]">
               <div class="m-0 shadow-sm flex rounded-sm justify-center items-center bg-gradient-to-r from-sky-400 to-blue-600 text-white text-xs w-18 h-6 dark:from-sky-600 dark:to-blue-800">Github</div>
@@ -121,7 +121,7 @@
       </div>
     </footer>
     <!-- <script type="module" src="/src/main.js"></script> -->
-    <script type="module" src="/components/header/innerHeader.js"></script>
-    <script type="module" src="/components/header/header.js"></script>
+    <script type="module" src="./components/header/innerHeader.js"></script>
+    <script type="module" src="./components/header/header.js"></script>
   </body>
 </html>
