깃허브 배포 테스트

--- a/pages/header.html
+++ b/pages/header.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
     <title>HeaderHtml</title>
   </head>
   <body>
@@ -21,10 +21,10 @@
           aria-controls="menuBar"
         >
           <!-- 다크 모드일때 -->
-          <img class="hidden dark:block" width="40" height="40" src="/img/mode/dark/menubar_dark.png" alt="" />
+          <img class="hidden dark:block" width="40" height="40" src="./img/mode/dark/menubar_dark.png" alt="" />
 
           <!-- 라이트 모드일때 -->
-          <img class="block dark:hidden" width="40" height="40" src="/img/mode/light/menubar_light.png" alt="" />
+          <img class="block dark:hidden" width="40" height="40" src="./img/mode/light/menubar_light.png" alt="" />
         </button>
 
         <div class="sm:ml-1 text-2xl flex gap-4 justify-center items-center">
@@ -43,9 +43,9 @@
         <div class="relative flex justify-end items-center flex-grow mr-5 gap-2">
           <button id="searchBtn" class="cursor-pointer hover:border-white hover:rounded hover:bg-gray-100 dark:hover:bg-gray-700">
             <!-- 다크 모드 -->
-            <img class="ml-auto hidden dark:block" width="40" height="40"  src="/img/mode/dark/search_dark.png" alt="검색" />
+            <img class="ml-auto hidden dark:block" width="40" height="40"  src="./img/mode/dark/search_dark.png" alt="검색" />
             <!-- 라이트 모드 -->
-            <img class="ml-auto bolck dark:hidden" width="40" height="40"  src="/img/mode/light/search_light.png" alt="검색" />
+            <img class="ml-auto bolck dark:hidden" width="40" height="40"  src="./img/mode/light/search_light.png" alt="검색" />
           </button>
           <div
             id="searchWrap"
@@ -71,17 +71,17 @@
             <!-- moon 아이콘 -->
             <div class="duration-300 ease-out">
               <!-- 다크 모드 -->
-              <img id="moon_light" width="40" height="40" class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 w-8 h-8 z-11 transition-all duration-300 ease-out" src="/img/mode/light/moon_light.png" alt=""/>
+              <img id="moon_light" width="40" height="40" class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 w-8 h-8 z-11 transition-all duration-300 ease-out" src="./img/mode/light/moon_light.png" alt=""/>
               <!-- 라이트 모드 -->
-              <img id="moon_dark" width="30" height="30" class="absolute left-10 top-4 w-4 h-4 z-11 transition-all duration-300 ease-out" src="/img/mode/dark/moon_dark.png" alt=""/>
+              <img id="moon_dark" width="30" height="30" class="absolute left-10 top-4 w-4 h-4 z-11 transition-all duration-300 ease-out" src="./img/mode/dark/moon_dark.png" alt=""/>
             </div>
 
             <!-- sun 아이콘 -->
             <div class="duration-300 ease-out">
               <!-- 라이트모드 -->
-              <img id="sun_dark" width="40" height="40" class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 w-8 h-8 z-11 transition-all duration-300 ease-out" src="/img/mode/dark/sun_dark.png" alt=""/>
+              <img id="sun_dark" width="40" height="40" class="absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2 w-8 h-8 z-11 transition-all duration-300 ease-out" src="./img/mode/dark/sun_dark.png" alt=""/>
               <!-- 다크모드 -->
-              <img id="sun_light" width="30" height="30" class="absolute left-10 top-4 w-4 h-4 z-11 transition-all duration-300 ease-out" src="/img/mode/light/sun_light.png" alt=""/>
+              <img id="sun_light" width="30" height="30" class="absolute left-10 top-4 w-4 h-4 z-11 transition-all duration-300 ease-out" src="./img/mode/light/sun_light.png" alt=""/>
             </div>
           </button>
         </div>
@@ -94,9 +94,9 @@
             <h2 class="text-2xl ml-5">메뉴</h2>
             <button id="menuExitBtn" class="cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-600 hover:rounded ml-auto mr-5" aria-label="메뉴 닫기">
               <!-- 다크 모드 -->
-              <img class="hidden dark:block" width="30" height="30" src="/img/mode/dark/delete_dark.png" alt=""/>
+              <img class="hidden dark:block" width="30" height="30" src="./img/mode/dark/delete_dark.png" alt=""/>
               <!-- 라이트 모드 -->
-              <img class="block dark:hidden" width="30" height="30" src="/img/mode/light/delete_light.png" alt=""/>
+              <img class="block dark:hidden" width="30" height="30" src="./img/mode/light/delete_light.png" alt=""/>
             </button>
           </div>
           <div class="flex items-center pt-4 pb-4 text-lg border-b border-gray-700">
@@ -107,9 +107,9 @@
           </div>
           <nav>
             <ul class="flex flex-col gap-12 mt-5 mb-5 text-2xl p-5">
-              <li><a href="/index.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="Home 이동">Home</a></li>
-              <li><a href="/pages/about.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="About 이동">About</a></li>
-              <li><a href="/pages/devLog.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="DevLog 이동">DevLog</a></li>
+              <li><a href="./index.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="Home 이동">Home</a></li>
+              <li><a href="./pages/about.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="About 이동">About</a></li>
+              <li><a href="./pages/devLog.html" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="DevLog 이동">DevLog</a></li>
               <li><a href="/" class="hover:text-gray-500 dark:hover:text-gray-500" aria-label="연락처 이동">연락처</a></li>
             </ul>
           </nav>
@@ -119,11 +119,11 @@
 
     
     <!-- <script type="module" src="/src/main.js"></script> -->
-    <script src="/components/menuBtn.js"></script>
+    <script type="module" src="/components/menuBtn.js"></script>
     <script type="module" src="/components/darkmode/darkmode_index.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
     <script type="module" src="/components/login/loginState.js"></script>
-    <script src="/components/nav/navLoginTextControler.js"></script>
-    <script src="/components/searchBtn.js"></script>
+    <script type="module" src="/components/nav/navLoginTextControler.js"></script>
+    <script type="module" src="/components/searchBtn.js"></script>
   </body>
 </html>
