--- a/pages/postCreate.html
+++ b/pages/postCreate.html
@@ -94,8 +94,8 @@
             <span>나가기</span>
           </button>
           <div class="flex gap-10 mr-5 h-10">
-            <button class="cursor-pointer rounded-2xl p-2 w-25 h-10 hover:bg-gray-200 dark:hover:bg-gray-600">임시저장</button>
-            <button id="button" class="cursor-pointer rounded-2xl p-2 w-25 h-10 text-white hover:bg-purple-400 bg-purple-500 dark:bg-purple-700 dark:hover:bg-purple-600">개시하기</button>
+            <button id="temp_createPost" class="cursor-pointer rounded-2xl p-2 w-25 h-10 hover:bg-gray-200 dark:hover:bg-gray-600">임시저장</button>
+            <button id="createPostTable" class="cursor-pointer rounded-2xl p-2 w-25 h-10 text-white hover:bg-purple-400 bg-purple-500 dark:bg-purple-700 dark:hover:bg-purple-600">개시하기</button>
           </div>
         </div>
       <!-- 프리뷰 영역 -->
@@ -122,5 +122,8 @@
     
     <!-- marked 사용(CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+    <!-- DB로 정보 전달 -->
+     <script type="module" src="../components/postCreate/postCreate.js"></script>
   </body>
 </html>
