--- a/pages/post.html
+++ b/pages/post.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>개인 개발 블로그 - 회고록</title>
+    <title>개인 개발 블로그 - 게시글</title>
     <link rel="stylesheet" href="/src/scroll.css" />
     <link rel="stylesheet" href="/src/post-layout.css" />
     <script type="module" src="/components/header/innerHeader.js"></script>
     <script type="module" src="/components/header/header.js"></script>
     <script type="module" src="/components/post/postLoad.js"></script>
     <script type="module" src="/components/post/postDelete.js"></script>
-    <script type="module" src="/components/post/postCorrection.js"></script>
-    <script type="module" src="/components/post/postAsideInner.js"></script>
+    <script type="module" src="/components/post/postMoreButtonEvent.js"></script>
+    <script type="module" src="/components/post/postCorrectionButtonEvent.js"></script>
     <script type="module" src="/src/main.js"></script>
   </head>
 
@@ -61,7 +61,7 @@
                   <circle cx="19" cy="12" r="2" />
                 </svg>
               </button>
-              <button
+              <button id="postBtnCorrection"
                 class="post-correction cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl"
                 type="button"
               >
