--- a/pages/post.html
+++ b/pages/post.html
@@ -36,10 +36,10 @@
             </div>
             <div class="post-ButtonComponent relative">
               <div id="postMoreBtnEvent" class="post-moreComponentBtn flex flex-col gap-5 absolute w-10 justify-center duration-300 ease-out top-24 left-1/2 -translate-x-1/2 -translate-y-1/2 opacity-0 hidden">
-                <button class="cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl" type="button">
+                <button id="postBtnCorrection_mobile" class="cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl" type="button">
                   수정
                 </button>
-                <button id="postBtnDelete" class="cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl" type="button">
+                <button id="postBtnDelete_mobile" class="cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl" type="button">
                   삭제
                 </button>
               </div>
@@ -61,14 +61,14 @@
                   <circle cx="19" cy="12" r="2" />
                 </svg>
               </button>
-              <button id="postBtnCorrection"
+              <button id="postBtnCorrection_desk"
                 class="post-correction cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl"
                 type="button"
               >
                 수정
               </button>
               <button
-                id="postBtnDelete"
+                id="postBtnDelete_desk"
                 class="post-delete cursor-pointer hover:bg-gray-300 dark:hover:bg-gray-600 rounded-xl"
                 type="button"
               >
